# discord-music-app

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  auto-deploy.sh  deploy.sh  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
backend/: .dockerignore  .env.example  Dockerfile  api.py  app_logging.py  bot.py  chat.py  models.py  music_player.py  pyproject.toml  railway.toml  realtimeapi.py  requirements.txt  settings.py  setup_dev.sh  simple_logger.py  test_logging.py
backend/app/: bot.py  config.py  db.py  logging.py  main.py  schemas.py
backend/app/api/: chat.py  realtime.py  valorant.py
backend/app/services/: music_player.py
backend/scripts/: check_dependencies.py
frontend/: .env.local.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: sw.js
frontend/src/: middleware.ts  sw.ts
frontend/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
frontend/src/app/api/discord/userGuilds/: route.ts
frontend/src/app/offline/: page.tsx
frontend/src/components/: AIRecommendScreen.tsx  ArtistDialog.tsx  ChatScreen.tsx  Header.tsx  HomeScreen.tsx  IntroPage.tsx  MainApp.tsx  MainPlayer.tsx  QueueList.tsx  RealtimeScreen.tsx  SearchResults.tsx  SideMenu.tsx  UploadedMusicScreen.tsx  VALORANTScreen.tsx
frontend/src/components/ui/: scroll-area.tsx
frontend/src/contexts/: GuildContext.tsx  MainPlayerContext.tsx  PlaybackContext.tsx  VolumeContext.tsx
frontend/src/hooks/: use-player.ts
frontend/src/lib/: auth.ts  features.ts
frontend/src/store/: index.ts  useGuildStore.ts  usePlayerStore.ts
frontend/src/utils/: api.ts  websocket.ts
memory/: 2026-04-07-voice-join-timeout-fix.md  2026-04-07-wsl2-playwright-headful-setup.md
public/: sw.js
scripts/: README.md  open-vercel-browser.sh
src/: middleware.ts  next-auth.d.ts
src/app/: global.d.ts  globals.css  layout.tsx  manifest.json  metadata.ts  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/discord/guilds/: route.ts
src/app/birthday-surprise/: page.tsx
src/components/: AIRecommendScreen.tsx  ArtistDialog.tsx  ChatScreen.tsx  DifyChatButton.tsx  ErrorBoundary.tsx  Header.tsx  HomeScreen.tsx  IntroPage.tsx  MainApp.tsx  MainPlayer.tsx  MobileOptimizedMessage.tsx  NowPlaying.tsx  Player.tsx  Queue.tsx  QueueList.tsx  RealtimeScreen.tsx  SearchBar.tsx  SearchResults.tsx  ServerSelector.tsx  SideMenu.tsx  UploadDialog.tsx  UploadedMusicScreen.tsx  VoiceChannelSelector.tsx
src/components/player/: RelatedTracks.tsx
src/components/ui/: input.tsx  loading.tsx  visually-hidden.tsx
src/contexts/: GuildContext.tsx  MainPlayerContext.tsx  PlaybackContext.tsx
src/hooks/: use-player.ts  use-toast.ts
src/lib/: auth.ts
src/store/: usePlayerStore.ts
src/utils/: api.ts  websocket.ts
