[project]
name = "backend"
version = "0.1.0"
description = "Discord Music Bot Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "attrs",
    "bgutil-ytdlp-pot-provider>=1.2.2",
    "Brotli",
    "certifi",
    "charset-normalizer",
    "click",
    "discord",
    "discord.py",
    "distro",
    "fastapi",
    "frozenlist",
    "google-genai>=1.52.0",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jiter",
    "multidict",
    "mutagen",
    "openai",
    "Pillow",
    "propcache",
    "pycryptodomex",
    "pydantic",
    "pydantic-settings",
    "pydantic_core",
    "pynacl>=1.5.0",
    "python-dotenv",
    "python-multipart",
    "requests",
    "sniffio",
    "starlette",
    "tqdm",
    "typing_extensions",
    "urllib3",
    "uvicorn",
    "websockets",
    "xai-sdk>=1.3.1",
    "yarl",
    "yt-dlp",
    "yt-dlp-ejs>=0.3.2",
    "ytmusicapi",
]

# システム依存関係の記録（コメント）
# Required system dependencies:
# - ffmpeg (for audio processing)

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # スクリプトのみのプロジェクト
