[project]
name = "backend"
version = "0.1.0"
description = "Discord Music Bot Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "bgutil-ytdlp-pot-provider>=1.2.2",
    "davey>=0.1.4",
    "discord.py>=2.7.0",
    "fastapi",
    "google-genai>=1.52.0",
    "httpx",
    "mutagen",
    "openai",
    "Pillow",
    "pydantic",
    "pydantic-settings",
    "pynacl>=1.5.0",
    "python-dotenv",
    "python-multipart",
    "uvicorn",
    "websockets",
    "xai-sdk>=1.3.1",
    "yt-dlp",
    "yt-dlp-ejs>=0.3.2",
    "ytmusicapi",
]

# システム依存関係の記録（コメント）
# Required system dependencies:
# - ffmpeg (for audio processing)

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # スクリプトのみのプロジェクト
